--- a/requirements.txt
+++ b/requirements.txt
@@ -7,7 +7,7 @@ importlib-metadata==3.10.0
 itsdangerous==1.1.0
 Jinja2==2.11.3
 MarkupSafe==1.1.1
-pkg-resources==0.0.0
+python-dateutil==2.8.2
 SQLAlchemy==1.4.7
 typing-extensions==3.7.4.3
 Werkzeug==1.0.1
